core/nuts-runtime/src/main/java/net/thevpc/nuts/runtime/standalone/tson/impl/parser/javacc/TsonStreamParserImpl.java
/* Generated By:JavaCC: Do not edit this line. TsonStreamParserImpl.java */
package net.thevpc.nuts.runtime.standalone.tson.impl.parser.javacc;

import net.thevpc.nuts.runtime.standalone.tson.*;

public class TsonStreamParserImpl implements TsonStreamParserImplConstants {
    private TsonStreamParserConfig config;
    private TsonParserVisitor visitor;
    private Object source;

    public Object source(){
        return source;
    }
    public void source(Object source){
        this.source=source;
        CommentsHelper.init(config, visitor, source);
    }
    public void setConfig(TsonStreamParserConfig c){
        this.config=c;
        this.visitor=config.getVisitor();
        CommentsHelper.init(config, visitor, source);
    }

  final public void parseDocument() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATETIME:
      case DATE:
      case TIME:
      case REGEX:
      case LBRACE:
      case NUMBER:
      case DOUBLE_QUOTE_STR:
      case SINGLE_QUOTE_STR:
      case LINE_STR:
      case ANTI_QUOTE_STR:
      case TRIPLE_DOUBLE_QUOTE_STR:
      case TRIPLE_SINGLE_QUOTE_STR:
      case TRIPLE_ANTI_QUOTE_STR:
      case TRUE:
      case FALSE:
      case NULL:
      case LPAREN:
      case LBRACK:
      case AT:
      case CHARSTREAM_START:
      case NAME:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      parseElement();
    }
        visitor.visitDocumentEnd();
  }

  final public void parseElement() throws ParseException {
    elementLevel2();
  }

  final public void elementLevel2() throws ParseException {
visitor.visitInstructionStart();
boolean simple=true;
Token t ;
    elementLevel1();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLON:
    case OP_PLUS:
    case OP_PLUS2:
    case OP_PLUS3:
    case OP_MINUS:
    case OP_MINUS2:
    case OP_MINUS3:
    case OP_MUL:
    case OP_MUL2:
    case OP_MUL3:
    case OP_DIV:
    case OP_DIV3:
    case OP_HAT:
    case OP_HAT2:
    case OP_HAT3:
    case OP_REM:
    case OP_REM2:
    case OP_REM3:
    case OP_EQ:
    case OP_EQ2:
    case OP_EQ3:
    case OP_TILDE:
    case OP_TILDE2:
    case OP_TILDE3:
    case OP_LT:
    case OP_LT2:
    case OP_LT3:
    case OP_GT:
    case OP_GT2:
    case OP_GT3:
    case OP_LTE:
    case OP_GTE:
    case OP_ASSIGN:
    case OP_ASSIGN_EQ:
    case OP_MINUS_GT:
    case OP_MINUS2_GT:
    case OP_EQ_GT:
    case OP_EQ2_GT:
    case OP_LT_MINUS2:
    case OP_LT_EQ2:
    case OP_PIPE:
    case OP_PIPE2:
    case OP_PIPE3:
    case OP_AND:
    case OP_AND2:
    case OP_AND3:
    case OP_HASH:
    case OP_HASH2:
    case OP_HASH3:
    case OP_HASH4:
    case OP_HASH5:
    case OP_HASH6:
    case OP_HASH7:
    case OP_HASH8:
    case OP_HASH9:
    case OP_HASH10:
    case AT2:
      t = op();
      elementLevel1();
                             simple=false;visitor.visitBinOpEnd(t.image);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
        if(simple){
            visitor.visitSimpleEnd();
        }
  }

  final public Token op() throws ParseException {
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLON:
      t = jj_consume_token(COLON);
      break;
    case OP_PLUS:
      t = jj_consume_token(OP_PLUS);
      break;
    case OP_PLUS2:
      t = jj_consume_token(OP_PLUS2);
      break;
    case OP_PLUS3:
      t = jj_consume_token(OP_PLUS3);
      break;
    case OP_MINUS:
      t = jj_consume_token(OP_MINUS);
      break;
    case OP_MINUS2:
      t = jj_consume_token(OP_MINUS2);
      break;
    case OP_MINUS3:
      t = jj_consume_token(OP_MINUS3);
      break;
    case OP_MUL:
      t = jj_consume_token(OP_MUL);
      break;
    case OP_MUL2:
      t = jj_consume_token(OP_MUL2);
      break;
    case OP_MUL3:
      t = jj_consume_token(OP_MUL3);
      break;
    case OP_DIV:
      t = jj_consume_token(OP_DIV);
      break;
    case OP_DIV3:
      t = jj_consume_token(OP_DIV3);
      break;
    case OP_HAT:
      t = jj_consume_token(OP_HAT);
      break;
    case OP_HAT2:
      t = jj_consume_token(OP_HAT2);
      break;
    case OP_HAT3:
      t = jj_consume_token(OP_HAT3);
      break;
    case OP_REM:
      t = jj_consume_token(OP_REM);
      break;
    case OP_REM2:
      t = jj_consume_token(OP_REM2);
      break;
    case OP_REM3:
      t = jj_consume_token(OP_REM3);
      break;
    case OP_EQ:
      t = jj_consume_token(OP_EQ);
      break;
    case OP_EQ2:
      t = jj_consume_token(OP_EQ2);
      break;
    case OP_EQ3:
      t = jj_consume_token(OP_EQ3);
      break;
    case OP_TILDE:
      t = jj_consume_token(OP_TILDE);
      break;
    case OP_TILDE2:
      t = jj_consume_token(OP_TILDE2);
      break;
    case OP_TILDE3:
      t = jj_consume_token(OP_TILDE3);
      break;
    case OP_LT:
      t = jj_consume_token(OP_LT);
      break;
    case OP_LT2:
      t = jj_consume_token(OP_LT2);
      break;
    case OP_LT3:
      t = jj_consume_token(OP_LT3);
      break;
    case OP_GT:
      t = jj_consume_token(OP_GT);
      break;
    case OP_GT2:
      t = jj_consume_token(OP_GT2);
      break;
    case OP_GT3:
      t = jj_consume_token(OP_GT3);
      break;
    case OP_LTE:
      t = jj_consume_token(OP_LTE);
      break;
    case OP_GTE:
      t = jj_consume_token(OP_GTE);
      break;
    case OP_ASSIGN:
      t = jj_consume_token(OP_ASSIGN);
      break;
    case OP_ASSIGN_EQ:
      t = jj_consume_token(OP_ASSIGN_EQ);
      break;
    case OP_MINUS_GT:
      t = jj_consume_token(OP_MINUS_GT);
      break;
    case OP_MINUS2_GT:
      t = jj_consume_token(OP_MINUS2_GT);
      break;
    case OP_EQ_GT:
      t = jj_consume_token(OP_EQ_GT);
      break;
    case OP_EQ2_GT:
      t = jj_consume_token(OP_EQ2_GT);
      break;
    case OP_LT_MINUS2:
      t = jj_consume_token(OP_LT_MINUS2);
      break;
    case OP_LT_EQ2:
      t = jj_consume_token(OP_LT_EQ2);
      break;
    case OP_PIPE:
      t = jj_consume_token(OP_PIPE);
      break;
    case OP_PIPE2:
      t = jj_consume_token(OP_PIPE2);
      break;
    case OP_PIPE3:
      t = jj_consume_token(OP_PIPE3);
      break;
    case OP_AND:
      t = jj_consume_token(OP_AND);
      break;
    case OP_AND2:
      t = jj_consume_token(OP_AND2);
      break;
    case OP_AND3:
      t = jj_consume_token(OP_AND3);
      break;
    case OP_HASH:
      t = jj_consume_token(OP_HASH);
      break;
    case OP_HASH2:
      t = jj_consume_token(OP_HASH2);
      break;
    case OP_HASH3:
      t = jj_consume_token(OP_HASH3);
      break;
    case OP_HASH4:
      t = jj_consume_token(OP_HASH4);
      break;
    case OP_HASH5:
      t = jj_consume_token(OP_HASH5);
      break;
    case OP_HASH6:
      t = jj_consume_token(OP_HASH6);
      break;
    case OP_HASH7:
      t = jj_consume_token(OP_HASH7);
      break;
    case OP_HASH8:
      t = jj_consume_token(OP_HASH8);
      break;
    case OP_HASH9:
      t = jj_consume_token(OP_HASH9);
      break;
    case OP_HASH10:
      t = jj_consume_token(OP_HASH10);
      break;
    case AT2:
      t = jj_consume_token(AT2);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public void elementLevel1() throws ParseException {
    visitor.visitElementStart();
    Token typeName=null;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AT:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      annotation();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      jj_consume_token(NULL);
             visitor.visitPrimitiveEnd(Tson.ofNull());
      break;
    case TRUE:
      jj_consume_token(TRUE);
              visitor.visitPrimitiveEnd(Tson.ofTrue());
      break;
    case FALSE:
      jj_consume_token(FALSE);
               visitor.visitPrimitiveEnd(Tson.ofFalse());
      break;
    case DATETIME:
      jj_consume_token(DATETIME);
                   visitor.visitPrimitiveEnd(Tson.parseLocalDateTime(token.image));
      break;
    case DATE:
      jj_consume_token(DATE);
               visitor.visitPrimitiveEnd(Tson.parseLocalDate(token.image));
      break;
    case TIME:
      jj_consume_token(TIME);
               visitor.visitPrimitiveEnd(Tson.parseLocalTime(token.image));
      break;
    case REGEX:
      jj_consume_token(REGEX);
                visitor.visitPrimitiveEnd(Tson.parseRegex(token.image));
      break;
    case NUMBER:
      jj_consume_token(NUMBER);
               visitor.visitPrimitiveEnd(Tson.parseNumber(token.image));
      break;
    case LINE_STR:
      jj_consume_token(LINE_STR);
                   visitor.visitPrimitiveEnd(Tson.parseString(token.image));
      break;
    case SINGLE_QUOTE_STR:
      jj_consume_token(SINGLE_QUOTE_STR);
                           visitor.visitPrimitiveEnd(Tson.parseString(token.image));
      break;
    case DOUBLE_QUOTE_STR:
      jj_consume_token(DOUBLE_QUOTE_STR);
                           visitor.visitPrimitiveEnd(Tson.parseString(token.image));
      break;
    case ANTI_QUOTE_STR:
      jj_consume_token(ANTI_QUOTE_STR);
                         visitor.visitPrimitiveEnd(Tson.parseString(token.image));
      break;
    case TRIPLE_DOUBLE_QUOTE_STR:
      jj_consume_token(TRIPLE_DOUBLE_QUOTE_STR);
                                  visitor.visitPrimitiveEnd(Tson.parseString(token.image));
      break;
    case TRIPLE_SINGLE_QUOTE_STR:
      jj_consume_token(TRIPLE_SINGLE_QUOTE_STR);
                                  visitor.visitPrimitiveEnd(Tson.parseString(token.image));
      break;
    case TRIPLE_ANTI_QUOTE_STR:
      jj_consume_token(TRIPLE_ANTI_QUOTE_STR);
                                visitor.visitPrimitiveEnd(Tson.parseString(token.image));
      break;
    case CHARSTREAM_START:
      bin();
      break;
    case LBRACE:
      object(false);
      break;
    case LBRACK:
      array(false);
      break;
    case NAME:
      named();
      break;
    case LPAREN:
      unnamed();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void bin() throws ParseException {
    TsonBinaryStreamBuilder bin=Tson.ofBinStream();
    jj_consume_token(CHARSTREAM_START);
    bin.writeBase64(token.image);
    jj_consume_token(CHARSTREAM_END);
    visitor.visitPrimitiveEnd(bin.build());
  }

  final public void param() throws ParseException {
    visitor.visitParamElementStart();
    elementLevel2();
        visitor.visitParamElementEnd();
  }

  final public void objectElement() throws ParseException {
    visitor.visitObjectElementStart();
    elementLevel2();
        visitor.visitObjectElementEnd();
  }

  final public void arrayElement() throws ParseException {
    visitor.visitArrayElementStart();
    elementLevel2();
        visitor.visitArrayElementEnd();
  }

  final public void commaSeparator() throws ParseException {
    jj_consume_token(COMMA);
            visitor.listSeparator();
  }

  final public void semiColonSeparator() throws ParseException {
    jj_consume_token(SEMICOLON);
            visitor.matrixRowSeparator();
  }

  final public void paramList() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATETIME:
      case DATE:
      case TIME:
      case REGEX:
      case LBRACE:
      case NUMBER:
      case DOUBLE_QUOTE_STR:
      case SINGLE_QUOTE_STR:
      case LINE_STR:
      case ANTI_QUOTE_STR:
      case TRIPLE_DOUBLE_QUOTE_STR:
      case TRIPLE_SINGLE_QUOTE_STR:
      case TRIPLE_ANTI_QUOTE_STR:
      case TRUE:
      case FALSE:
      case NULL:
      case LPAREN:
      case LBRACK:
      case COMMA:
      case AT:
      case CHARSTREAM_START:
      case NAME:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATETIME:
      case DATE:
      case TIME:
      case REGEX:
      case LBRACE:
      case NUMBER:
      case DOUBLE_QUOTE_STR:
      case SINGLE_QUOTE_STR:
      case LINE_STR:
      case ANTI_QUOTE_STR:
      case TRIPLE_DOUBLE_QUOTE_STR:
      case TRIPLE_SINGLE_QUOTE_STR:
      case TRIPLE_ANTI_QUOTE_STR:
      case TRUE:
      case FALSE:
      case NULL:
      case LPAREN:
      case LBRACK:
      case AT:
      case CHARSTREAM_START:
      case NAME:
        param();
        break;
      case COMMA:
        commaSeparator();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void objectElementList() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATETIME:
      case DATE:
      case TIME:
      case REGEX:
      case LBRACE:
      case NUMBER:
      case DOUBLE_QUOTE_STR:
      case SINGLE_QUOTE_STR:
      case LINE_STR:
      case ANTI_QUOTE_STR:
      case TRIPLE_DOUBLE_QUOTE_STR:
      case TRIPLE_SINGLE_QUOTE_STR:
      case TRIPLE_ANTI_QUOTE_STR:
      case TRUE:
      case FALSE:
      case NULL:
      case LPAREN:
      case LBRACK:
      case COMMA:
      case AT:
      case CHARSTREAM_START:
      case NAME:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATETIME:
      case DATE:
      case TIME:
      case REGEX:
      case LBRACE:
      case NUMBER:
      case DOUBLE_QUOTE_STR:
      case SINGLE_QUOTE_STR:
      case LINE_STR:
      case ANTI_QUOTE_STR:
      case TRIPLE_DOUBLE_QUOTE_STR:
      case TRIPLE_SINGLE_QUOTE_STR:
      case TRIPLE_ANTI_QUOTE_STR:
      case TRUE:
      case FALSE:
      case NULL:
      case LPAREN:
      case LBRACK:
      case AT:
      case CHARSTREAM_START:
      case NAME:
        objectElement();
        break;
      case COMMA:
        commaSeparator();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }
